Fix API tests on windows
Preserve \n line endings in API expectation files

Bug: 312412490
Test: These are tests
Change-Id: Ide028e1d915504a213c59924d1f2b64eed544ecb